--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
     // Koin AndroidX Fragment features
     implementation "org.koin:koin-androidx-fragment:$koin_version"
+    implementation project(path: ':data')
+    implementation project(path: ':domain')
+    implementation project(path: ':auth')
 
     def lifecycle_version = "2.2.0"
     // ViewModel
@@ -60,7 +63,7 @@ dependencies {
 
 
     // Navigation
-    def nav_version = "2.3.0-rc01"
+    def nav_version = '2.3.0'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
