--- a/firebase_data/build.gradle
+++ b/firebase_data/build.gradle
@@ -30,12 +30,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation project(path: ':data')
+    implementation project(path: ':firebase_auth')
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
 
-    //Firebase Db
-    implementation 'com.google.firebase:firebase-database-ktx:19.3.1'
+    //Firebase Firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.5.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
