--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta7'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta8'
 
     implementation 'com.google.android.material:material:1.3.0-alpha01'
 
@@ -61,6 +61,8 @@ dependencies {
     implementation project(path: ':auth')
     implementation project(path: ':firebase_auth')
     implementation project(path: ':firebase_data')
+    implementation project(path: ':notifications')
+    implementation project(path: ':firebase_notifications')
 
     def lifecycle_version = "2.2.0"
     // ViewModel
@@ -76,9 +78,6 @@ dependencies {
     // Paging
     def paging_version = "3.0.0-alpha02"
     implementation "androidx.paging:paging-runtime:$paging_version"
-
-    // Picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
