--- a/firebase_notifications/src/main/AndroidManifest.xml
+++ b/firebase_notifications/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.daniilbug.notifications">
+<manifest package="com.github.daniilbug.notifications">
 
     /
 </manifest>
